--- a/mAP_tool/mAP_tool.vcxproj
+++ b/mAP_tool/mAP_tool.vcxproj
@@ -76,7 +76,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>./include;./glew-2.1.0\include;./;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\user\Desktop\나중에삭제\Git\mAP_toolkit\mAP_tool\imgui;C:\Users\user\Desktop\나중에삭제\Git\mAP_toolkit\backends;./include;./glew-2.1.0\include;./;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
@@ -94,7 +94,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>./include;./glew-2.1.0\include;./;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\user\Desktop\나중에삭제\Git\mAP_toolkit\mAP_tool\imgui;C:\Users\user\Desktop\나중에삭제\Git\mAP_toolkit\backends;./include;./glew-2.1.0\include;./;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
@@ -135,16 +135,33 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\backends\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="..\backends\imgui_impl_win32.cpp" />
+    <ClCompile Include="imgui\imgui.cpp" />
+    <ClCompile Include="imgui\imgui_demo.cpp" />
+    <ClCompile Include="imgui\imgui_draw.cpp" />
+    <ClCompile Include="imgui\imgui_tables.cpp" />
+    <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mAP_calculation\DefaultMapCalculation.cpp" />
     <ClCompile Include="mAP_calculation\MapCalculation.cpp" />
+    <ClCompile Include="renderer\mAPUiRenderer.cpp" />
     <ClCompile Include="renderer\Renderer.cpp" />
     <ClCompile Include="tool\Tool.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\backends\imgui_impl_opengl3.h" />
+    <ClInclude Include="..\backends\imgui_impl_win32.h" />
     <ClInclude Include="header.h" />
+    <ClInclude Include="imgui\imconfig.h" />
+    <ClInclude Include="imgui\imgui.h" />
+    <ClInclude Include="imgui\imgui_internal.h" />
+    <ClInclude Include="imgui\imstb_rectpack.h" />
+    <ClInclude Include="imgui\imstb_textedit.h" />
+    <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="mAP_calculation\DefaultMapCalculation.h" />
     <ClInclude Include="mAP_calculation\MapCalculation.h" />
+    <ClInclude Include="renderer\mAPUiRenderer.h" />
     <ClInclude Include="renderer\Renderer.h" />
     <ClInclude Include="tool\Tool.h" />
   </ItemGroup>
