--- a/mAP_tool/mAP_tool.vcxproj.filters
+++ b/mAP_tool/mAP_tool.vcxproj.filters
@@ -22,6 +22,12 @@
     <Filter Include="소스 파일\mAP_calculation">
       <UniqueIdentifier>{989e4043-c85c-444b-bfe0-9dd6e7f1a9b3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="GUI">
+      <UniqueIdentifier>{46f2bad5-b74d-4d2e-ac89-2b14ac2344c8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GUIBackEnd">
+      <UniqueIdentifier>{3444a4cd-1250-4143-ab7e-d76524774ad2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -39,6 +45,30 @@
     <ClCompile Include="mAP_calculation\MapCalculation.cpp">
       <Filter>소스 파일\mAP_calculation</Filter>
     </ClCompile>
+    <ClCompile Include="renderer\mAPUiRenderer.cpp">
+      <Filter>소스 파일\renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui.cpp">
+      <Filter>GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_demo.cpp">
+      <Filter>GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_draw.cpp">
+      <Filter>GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_tables.cpp">
+      <Filter>GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_widgets.cpp">
+      <Filter>GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="..\backends\imgui_impl_win32.cpp">
+      <Filter>GUIBackEnd</Filter>
+    </ClCompile>
+    <ClCompile Include="..\backends\imgui_impl_opengl3.cpp">
+      <Filter>GUIBackEnd</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h">
@@ -55,6 +85,33 @@
     </ClInclude>
     <ClInclude Include="mAP_calculation\MapCalculation.h">
       <Filter>소스 파일\mAP_calculation</Filter>
+    </ClInclude>
+    <ClInclude Include="renderer\mAPUiRenderer.h">
+      <Filter>소스 파일\renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imconfig.h">
+      <Filter>GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui.h">
+      <Filter>GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_internal.h">
+      <Filter>GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_rectpack.h">
+      <Filter>GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_textedit.h">
+      <Filter>GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_truetype.h">
+      <Filter>GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="..\backends\imgui_impl_win32.h">
+      <Filter>GUIBackEnd</Filter>
+    </ClInclude>
+    <ClInclude Include="..\backends\imgui_impl_opengl3.h">
+      <Filter>GUIBackEnd</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
