--- a/mAP_tool/imgui.ini
+++ b/mAP_tool/imgui.ini
@@ -3,10 +3,30 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=650,20
+Pos=1008,115
 Size=550,680
 
 [Window][Hello, world!]
 Pos=0,0
 Size=1600,900
+
+[Window][Image]
+Pos=100,0
+Size=1200,900
+
+[Window][Button List]
+Pos=0,0
+Size=100,900
+
+[Window][Image List]
+Pos=1300,0
+Size=300,250
+
+[Window][Attribute]
+Pos=1300,250
+Size=300,250
+
+[Window][Category]
+Pos=1300,500
+Size=300,400
 
