--- a/mAP_tool/mAP_tool.vcxproj
+++ b/mAP_tool/mAP_tool.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="imgui\imstb_rectpack.h" />
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
+    <ClInclude Include="imgui\stb_image.h" />
     <ClInclude Include="mAP_calculation\DefaultMapCalculation.h" />
     <ClInclude Include="mAP_calculation\MapCalculation.h" />
     <ClInclude Include="renderer\mAPUiRenderer.h" />
