--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@
 *.suo
 *.db
 
+mAP_test/.vs/mAP_test/v17/Browse.VC.db-shm
+mAP_test/.vs/mAP_test/v17/Browse.VC.db-wal
+mAP_test/.vs/mAP_test/v17/Browse.VC.opendb
