--- a/mAP_tool/mAP_tool.vcxproj.filters
+++ b/mAP_tool/mAP_tool.vcxproj.filters
@@ -97,7 +97,7 @@
       <Filter>소스 파일\renderer\WindowObserver</Filter>
     </ClCompile>
     <ClCompile Include="Observer.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>소스 파일\renderer\WindowObserver</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -174,7 +174,7 @@
       <Filter>소스 파일\renderer\WindowObserver</Filter>
     </ClInclude>
     <ClInclude Include="Observer.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>소스 파일\renderer\WindowObserver</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
