tp fp fn 구하는 함수 작성 test client 학인 완료

--- a/mAP_test/mAP_test/mAP_test.vcxproj
+++ b/mAP_test/mAP_test/mAP_test.vcxproj
@@ -127,11 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="DefaultMapCalculation.cpp" />
+    <ClCompile Include="MapCalculation.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DefaultMapCalculation.h" />
+    <ClInclude Include="MapCalculation.h" />
     <ClInclude Include="define.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
