--- a/mAP_test/mAP_test/mAP_test.vcxproj.filters
+++ b/mAP_test/mAP_test/mAP_test.vcxproj.filters
@@ -18,12 +18,12 @@
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="DefaultMapCalculation.cpp">
+    <ClCompile Include="MapCalculation.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DefaultMapCalculation.h">
+    <ClInclude Include="MapCalculation.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="define.h">
