배경색 변경, iou 설정 변경

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 *.db
 mAP_tool/inference/lib/opencv_world490d.dll
 mAP_tool/inference/lib/opencv_world490d_1.dll
+model/ocr_LPRNetS1B.aix
+model/yolov7.aix
